[gd_scene load_steps=22 format=3 uid="uid://cib4cf4xqwdwl"]

[ext_resource type="Script" path="res://scenes/characters/enemies/basic_enemy.gd" id="1_ohb5k"]
[ext_resource type="Texture2D" uid="uid://wp5t5tyxt87u" path="res://assets/basic_enemy.png" id="1_qgdoe"]
[ext_resource type="Shader" path="res://scenes/characters/enemies/hurt_effect.gdshader" id="2_3fym4"]
[ext_resource type="PackedScene" uid="uid://do88igja7lo2g" path="res://scenes/components/hurt_component.tscn" id="4_d3g6h"]
[ext_resource type="PackedScene" uid="uid://d4ehve8tkntur" path="res://scenes/components/hit_component.tscn" id="7_ubwvg"]
[ext_resource type="PackedScene" uid="uid://clwtpk3k3mqtr" path="res://scenes/components/chase_component.tscn" id="7_yjwt8"]
[ext_resource type="Script" path="res://scenes/characters/enemies/states/movement/idle_state.gd" id="12_87c5e"]
[ext_resource type="Script" path="res://scenes/characters/enemies/enemy_state_machine.gd" id="12_m2hqu"]
[ext_resource type="Script" path="res://scenes/characters/player/stats.gd" id="13_puba8"]
[ext_resource type="Script" path="res://scenes/characters/enemies/states/combat/attack_state.gd" id="13_x2q65"]
[ext_resource type="Script" path="res://scenes/characters/enemies/states/movement/chase_state.gd" id="14_785js"]
[ext_resource type="Script" path="res://scenes/characters/enemies/states/movement/knockback_state.gd" id="15_rs1o1"]
[ext_resource type="Script" path="res://scenes/characters/player/states/degub/state_name_displayer.gd" id="17_fe0s0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mv7xt"]
resource_local_to_scene = true
shader = ExtResource("2_3fym4")
shader_parameter/damage = 0.0
shader_parameter/damage_color = Vector4(1, 0, 0, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7b0g"]
atlas = ExtResource("1_qgdoe")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rp1y3"]
atlas = ExtResource("1_qgdoe")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_taykq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7b0g")
}],
"loop": true,
"name": &"enemy_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rp1y3")
}],
"loop": true,
"name": &"enemy_right",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_pt1ad"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8lc4q"]
radius = 133.0

[sub_resource type="CircleShape2D" id="CircleShape2D_kh7l8"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_dsoje"]

[node name="BasicEnemy" type="CharacterBody2D"]
y_sort_enabled = true
position = Vector2(1, 4)
collision_layer = 4
collision_mask = 3
motion_mode = 1
script = ExtResource("1_ohb5k")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_mv7xt")
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_taykq")
animation = &"enemy_right"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.884397, 0.884397)
shape = SubResource("CircleShape2D_pt1ad")

[node name="ChaseComponent" parent="." instance=ExtResource("7_yjwt8")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChaseComponent"]
shape = SubResource("CircleShape2D_8lc4q")

[node name="HitComponent" parent="." instance=ExtResource("7_ubwvg")]
collision_layer = 4
collision_mask = 2

[node name="HitComponentCollisionShape2D" type="CollisionShape2D" parent="HitComponent"]
shape = SubResource("CircleShape2D_kh7l8")
debug_color = Color(0.828911, 0.206107, 0.349316, 0.42)

[node name="HurtComponent" parent="." instance=ExtResource("4_d3g6h")]
collision_layer = 4
collision_mask = 2

[node name="HurtComponentCollisionShape2D" type="CollisionShape2D" parent="HurtComponent"]
scale = Vector2(1.54325, 1.54325)
shape = SubResource("CircleShape2D_dsoje")
debug_color = Color(0.782187, 0.435497, 0, 0.42)

[node name="EnemyStateMachine" type="Node" parent="." node_paths=PackedStringArray("start_state")]
script = ExtResource("12_m2hqu")
start_state = NodePath("Idle")

[node name="Idle" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("enemy", "animated_sprite")]
script = ExtResource("12_87c5e")
enemy = NodePath("../..")
animated_sprite = NodePath("../../AnimatedSprite2D")

[node name="Attack" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("hit_component_collision_shape", "enemy", "animated_sprite")]
script = ExtResource("13_x2q65")
hit_component_collision_shape = NodePath("../../HitComponent/HitComponentCollisionShape2D")
enemy = NodePath("../..")
animated_sprite = NodePath("../../AnimatedSprite2D")

[node name="AttackCooldownTimer" type="Timer" parent="EnemyStateMachine/Attack"]

[node name="Chase" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("enemy", "animated_sprite")]
script = ExtResource("14_785js")
enemy = NodePath("../..")
animated_sprite = NodePath("../../AnimatedSprite2D")

[node name="Knockback" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("enemy", "animated_sprite")]
script = ExtResource("15_rs1o1")
enemy = NodePath("../..")
animated_sprite = NodePath("../../AnimatedSprite2D")

[node name="StateNameDisplayer" type="Label" parent="." node_paths=PackedStringArray("character_body")]
offset_left = -20.0
offset_top = -55.0
offset_right = 20.0
offset_bottom = -32.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "Idle"
horizontal_alignment = 1
script = ExtResource("17_fe0s0")
character_body = NodePath("..")

[node name="Stats" type="Node" parent="."]
script = ExtResource("13_puba8")
strength = 5

[connection signal="body_entered" from="ChaseComponent" to="ChaseComponent" method="_on_body_entered"]
[connection signal="body_exited" from="ChaseComponent" to="ChaseComponent" method="_on_body_exited"]
[connection signal="start_chasing" from="ChaseComponent" to="EnemyStateMachine" method="_on_start_chasing"]
[connection signal="stop_chasing" from="ChaseComponent" to="EnemyStateMachine" method="_on_stop_chasing"]
[connection signal="area_entered" from="HitComponent" to="HitComponent" method="_on_area_entered"]
[connection signal="area_exited" from="HitComponent" to="HitComponent" method="_on_area_exited"]
[connection signal="hurt" from="HurtComponent" to="EnemyStateMachine" method="_on_hurt"]
[connection signal="state_changed" from="EnemyStateMachine" to="StateNameDisplayer" method="_on_state_machine_state_changed"]
